# image-search

./: .env.example  .gitignore  README.md  README_zh.md  connection.py  embed_imgs.py  embeddings.py  i18n.py  image_search_ui.py  image_store.py  pyproject.toml  utils.py
.streamlit/: config.toml
